swagger.yaml update & refactoring
